--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="outer-wrapper">
   <app-navbar></app-navbar>
-
-  <app-front-page></app-front-page>
+  <router-outlet></router-outlet>
 </div>
