--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -1,12 +1,18 @@
 .outer-wrapper {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
   background: #111111;
+
+  padding-top: 90px;
 
   app-navbar {
     display: flex;
     width: 100%;
     height: 90px;
+
+    position: absolute;
+    top: 0px;
+    background: #111111;
   }
 }
