--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -1,3 +1,13 @@
-<p>
-  front-page works!
-</p>
+<div class="wrapper">
+  <div class="search"  [class.focus]="_searchFocus">
+    <input type="Search" class="search-input" placeholder="Search" (focus)="searchFocus()" (blur)="searchBlur()">
+    <div class="submit">search</div>
+  </div>
+
+  <div class="movies">
+    <!-- We will include the link inside block content. No need to wrap it inside an anchor again! -->
+    <div class="movie" *ngFor="let moive of movies" (click)="navigateToMovie()">
+
+    </div>
+  </div>
+</div>
