--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <div class="navbar">
   <div class="app-title">
-    MovieStorm
+    <a routerLink="/" routerLinkActive="active">MovieStorm</a>
   </div>
 
-  <div class="username">
-    Phùng Đức Nhật
-  </div>
+  <nav class="login">
+    <a routerLink="/login" routerLinkActive="active">
+      Login / Signup
+    </a>
+  </nav>
 </div>
