--- a/src/app/navbar/navbar.component.styl
+++ b/src/app/navbar/navbar.component.styl
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 90px;
 
   .app-title {
     display: flex;
@@ -13,18 +13,27 @@
 
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 40px
-    color: white;
+    font-size: 32px
+
+    a {
+      color: white;
+
+      text-decoration: none;
+    }
   }
 
-  .username {
+  .login, .username {
     display: flex;
     padding-right: 76px;
 
     align-items: center;
 
     font-family: Lato Light;
-    font-size: 24px;
-    color: white;
+    font-size: 22px;
+
+    a {
+      color: white !important;
+      text-decoration: none;
+    }
   }
 }
