custom input components

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,9 +3,13 @@
     <a routerLink="/" routerLinkActive="active">MovieStorm</a>
   </div>
 
-  <nav class="login">
+  <nav class="account">
     <a routerLink="/login" routerLinkActive="active">
-      Login / Signup
+      Login
+    </a>
+    /
+    <a routerLink="/signup" routerLinkActive="active">
+      Signup
     </a>
   </nav>
 </div>
