--- a/src/app/navbar/navbar.component.styl
+++ b/src/app/navbar/navbar.component.styl
@@ -22,7 +22,7 @@
     }
   }
 
-  .login, .username {
+  .account {
     display: flex;
     padding-right: 76px;
 
@@ -30,6 +30,9 @@
 
     font-family: Lato Light;
     font-size: 22px;
+
+    color: white;
+    text-decoration: none;
 
     a {
       color: white !important;
