--- a/src/app/signup-page/signup-page.component.styl
+++ b/src/app/signup-page/signup-page.component.styl
@@ -12,12 +12,10 @@
   .wire-frame {
     display: flex;
     flex-flow: column nowrap;
+    justify-content: space-between;
 
     align-items: stretch;
-    justify-content: space-between;
     width: 640px;
-    min-height: 640px;
-
     padding-top: 60px;
     padding-bottom 80px;
 
@@ -48,6 +46,10 @@
 
         &.top {
           margin-top: 40px;
+        }
+
+        &.middle {
+          margin-bottom: 40px;
         }
 
         &.bottom {
