--- a/src/app/common-design/select-input/select-input.component.styl
+++ b/src/app/common-design/select-input/select-input.component.styl
@@ -1,15 +1,25 @@
-input {
+label {
+  font-family: Lato;
+  font-size: 12px;
+
+  color: #a0a0a0;
+}
+
+select {
   padding-top: 3px;
   padding-bottom: 3px;
 
-  width: 450px;
+  margin-top: 10px;
 
+  width: 100%;
   border: none;
   outline: none;
   box-shadow: none;
 
   font-family: Lato;
   font-size: 18px;
+
+  cursor: pointer;
 }
 
 .bottom-line {
@@ -17,15 +27,15 @@ input {
   justify-content: center;
   align-items: stretch;
 
+  width: 100%;
   height: 3px;
-  width: 450px;
 
   margin-bottom: 50px;
 
   background: #aaaaaa;
 
   .bottom-line-effect {
-    width: 0%;
+    width: 0;
     background: #111111;
 
     transition: ease-in 0s;
