--- a/src/app/front-page/front-page.component.styl
+++ b/src/app/front-page/front-page.component.styl
@@ -15,7 +15,7 @@
     height: 54px;
     width: 1200px;
 
-    margin-top: 60px;
+    margin-top: 24px;
     margin-bottom: 12px;
 
     background: white;
@@ -65,6 +65,7 @@
     align-content: space-between;
 
     margin-top: 65px;
+    margin-bottom: 60px;
     width: 1200px;
 
     .movie {
