--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -4,14 +4,24 @@
       <h1>Login</h1>
     </div>
 
-    <div class="input-line first-child">
-      <app-input-wrapper placeholder="Name"></app-input-wrapper>
-    </div>
-    <div class="input-line last">
-      <app-input-wrapper placeholder="Password"></app-input-wrapper>
+    <div class="content">
+      <div class="input-line first-child">
+        <app-input-wrapper
+          type="text"
+          placeholder="Name"
+          [(ngModel)]="username"
+        ></app-input-wrapper>
+      </div>
+      <div class="input-line last">
+        <app-input-wrapper
+          type="password"
+          placeholder="Password"
+          [(ngModel)]="password"
+        ></app-input-wrapper>
+      </div>
     </div>
 
-    <div class="submit-line">
+    <div class="submit-line" (click)="login()">
       <button>Done</button>
     </div>
   </div>
