--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -37,8 +37,8 @@
       </div>
     </div>
 
-    <div class="submit-line" click="signup()">
-      <button>Done</button>
+    <div class="submit-line">
+      <button (click)="signup()">Done</button>
     </div>
   </div>
 </div>
