feat: add icons

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: Lato;
+  src: url(./assets/Lato.ttf);
+}
+
+@font-face {
+  font-family: "Lato Heavy";
+  src: url(./assets/Lato-Heavy.ttf);
+}
+
+@font-face {
+  font-family: "Lato-Light";
+  src: url(./assets/Lato-Light.ttf);
+}
+
+@font-face {
+  font-family: "Lato-Medium";
+  src: url(./assets/Lato-Medium.ttf);
+}
+
+@font-face {
+  font-family: "Lato-Thin";
+  src: url(./assets/Lato-Thin.ttf);
+}
+
+@font-face {
+  font-family: "Lato-Semibold";
+  src: url(./assets/Lato-Semibold.ttf);
+}
+
+@font-face {
+  font-family: "Material Icons";
+  src: url(./assets/MaterialIcons-Regular.ttf);
+}
+
+
 html, body, app-root {
   display: block;
 
