--- a/src/styles.css
+++ b/src/styles.css
@@ -1,38 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
 @font-face {
-  font-family: Lato;
-  src: "./assets/Lato";
-}
-
-@font-face {
   font-family: "Lato Heavy";
-  src: "./assets/Lato-Heavy";
+  src: url("./assets/Lato-Heavy.ttf");
 }
 
 @font-face {
   font-family: "Lato-Light";
-  src: "./assets/Lato-Light";
+  src: url("./assets/Lato-Light.ttf");
 }
 
 @font-face {
   font-family: "Lato-Medium";
-  src: "./assets/Lato-Medium";
+  src: url("./assets/Lato-Medium.ttf");
 }
 
 @font-face {
   font-family: "Lato-Thin";
-  src: "./assets/Lato-Thin";
+  src: url("./assets/Lato-Thin.ttf");
 }
 
 @font-face {
   font-family: "Lato-Semibold";
-  src: "./assets/Lato-Semibold";
+  src: url("./assets/Lato-Semibold.ttf");
 }
 
 @font-face {
   font-family: "Material Icons";
-  src: "./assets/MaterialIcons-Regular";
+  src: url("./assets/MaterialIcons-Regular.ttf");
 }
 
 
