--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="wrapper">
   <div class="dashboard">
     <div class="back-action" (click)="navigateBack()">keyboard_backspace</div>
