--- a/src/app/navbar/navbar.component.styl
+++ b/src/app/navbar/navbar.component.styl
@@ -3,6 +3,11 @@
   width: 100%;
   height: 90px;
 
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+
   .app-title {
     display: flex;
     flex: 1 1 auto;
@@ -37,6 +42,7 @@
     a {
       color: white !important;
       text-decoration: none;
+      cursor: pointer;
     }
   }
 }
