--- a/src/app/front-page/front-page.component.styl
+++ b/src/app/front-page/front-page.component.styl
@@ -1,184 +1,80 @@
 .wrapper {
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
-  justify-content: flex-start;
 
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  top: 0px;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+
+  min-height: 800px;
 
   overflow: hidden;
 
-  .search {
-    display: flex;
-    align-items: stretch;
-    height: 54px;
-    width: 1200px;
+  background: url(../../assets/storm.jpg);
+  background-size: cover;
 
-    margin-top: 24px;
-    margin-bottom: 12px;
+  h1, h6, button {
+    color: white;
+    animation-name: fadeIn;
+    animation-duration: 0.8s;
+    animation-fill-mode: backwards;
+  }
 
-    background: white;
-
-    transition: margin-bottom 0.5s;
-
-    &.focus {
-      margin-bottom: 160px;
+  @keyframes fadeIn {
+    0% {
+      transform: translate(0px, 20px);
+      opacity: 0;
     }
 
-    .search-input {
-      display: flex;
-      align-items: center;
-      flex: 1 1 auto;
-
-      padding-left: 32px;
-      padding-right: 32px;
-
-      border: none;
-      outline: none;
-
-      box-shadow: none;
-
-      font-family: Lato;
-      font-size: 24px;
-    }
-
-    .submit {
-      display: flex;
-      align-items: center;
-
-      padding-right: 23px;
-      padding-left: 23px;
-
-      font-family: Material Icons;
-      font-size: 30px;
-      color: #303030;
-
-      cursor: pointer;
+    100% {
+      transform: translate(0px, 0px);
+      opacity: 1;
     }
   }
 
-  .movies {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-content: space-between;
+  h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 45px;
 
-    margin-top: 65px;
-    margin-bottom: 60px;
-    width: 1200px;
+    text-transform: uppercase;
+    animation-delay: 0s;
+  }
 
-    .movie {
-      margin-top: 6px;
-      margin-bottom: 6px;
+  h6 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    font-weight: lighter;
 
-      width: 290px;
-      height: 412px;
+    animation-delay: 0.5s;
+  }
 
+  button.start {
+    font-family: Arial, Helvetica, sans-serif;
+
+    padding: 10px 30px;
+
+    background: none;
+    border: none;
+    outline: none;
+
+    color: white;
+    font-size: 16px;
+    font-weight: lighter;
+
+    border: 2px solid white;
+    border-radius: 21px;
+    cursor: pointer;
+
+    animation-delay: 1s;
+
+    &:hover {
       background: white;
-
-      animation-iteration-count: 1;
-      animation-fill-mode: backwards;
-      animation-timing-function: ease-in-out;
-      animation-duration: 0.3s;
-
-      transition-duration: 0.4s;
-
-      cursor: pointer;
-    }
-
-    @keyframes slideIn1 {
-      0% {
-        transform: translate(-100px, -100px);
-        opacity: 0;
-      }
-
-      75% {
-        opacity: 0.8;
-      }
-
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes slideIn2 {
-      0% {
-        transform: translate(100px, -100px);
-        opacity: 0;
-      }
-
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes slideIn3 {
-      0% {
-        transform: translate(-100px, 100px);
-        opacity: 0;
-      }
-
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes slideIn4 {
-      0% {
-        transform: translate(100px, 100px);
-        opacity: 0;
-      }
-
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-
-    .movie:nth-child(1) {
-      animation-name: slideIn1;
-    }
-
-    .movie:nth-child(2) {
-      animation-name: slideIn2;
-    }
-
-    .movie:nth-child(3) {
-      animation-name: slideIn1;
-    }
-
-    .movie:nth-child(4) {
-      animation-name: slideIn2;
-    }
-
-    .movie:nth-child(5) {
-      animation-name: slideIn3;
-    }
-
-    .movie:nth-child(6) {
-      animation-name: slideIn4;
-    }
-
-    .movie:nth-child(7) {
-      animation-name: slideIn3;
-    }
-
-    .movie:nth-child(8) {
-      animation-name: slideIn4;
-    }
-
-    for $n in 1 2 3 4 5 6 7 8 {
-      .movie:nth-child({$n}) {
-        animation-delay: $n * 0.15s;
-      }
-    }
-
-    .movie:hover {
-      transform: scale(1.1);
+      border: 2px solid transparent;
+      color: #111111;
     }
   }
 }
