--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,23 @@
 <div class="navbar">
   <div class="app-title">
-    <a routerLink="/" routerLinkActive="active">MovieStorm</a>
+    <a routerLink="/home" routerLinkActive="active">MovieStorm</a>
   </div>
 
   <nav class="account">
-    <a routerLink="/login" routerLinkActive="active">
-      Login
-    </a>
-    /
-    <a routerLink="/signup" routerLinkActive="active">
-      Signup
-    </a>
+    <ng-template [ngIf]="!username">
+      <a routerLink="/login" routerLinkActive="active">
+        Login
+      </a>
+      /
+      <a routerLink="/signup" routerLinkActive="active">
+        Signup
+      </a>
+    </ng-template>
+
+    <ng-template [ngIf]="username">
+      <a>{{username}}</a>
+      /
+      <a (click)="logout()">Logout</a>
+    </ng-template>
   </nav>
 </div>
