--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -1,18 +1,29 @@
+@import '../styles.styl';
+
 .outer-wrapper {
   width: 100%;
   min-height: 100%;
 
   background: #111111;
 
-  padding-top: 90px;
+  padding-top: $(50px);
 
   app-navbar {
     display: flex;
     width: 100%;
-    height: 90px;
+    height: $(50px);
 
     position: absolute;
-    top: 0px;
+    top: 0;
+    left: 0;
+    right: 0;
     background: #111111;
+  }
+
+  app-home-page {
+    display: block;
+
+    height: 100%;
+    width: 100%;
   }
 }
