--- a/src/app/home-page/home-page.component.styl
+++ b/src/app/home-page/home-page.component.styl
@@ -1,21 +1,31 @@
+@import '../../styles.styl';
+
 .wrapper {
+  position: absolute;
+
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+
+  padding-top: 50px;
+
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: flex-start;
 
-  width: 100%;
-  min-height: 100%;
-
   overflow: hidden;
+
+  z-index: 1;
 
   .search {
     display: flex;
     align-items: stretch;
-    height: 54px;
-    width: 1200px;
+    height: $(40px);
+    width: $(1000px);
 
-    margin-top: 24px;
+    margin-top: $(54px);
     margin-bottom: 12px;
 
     background: white;
@@ -31,8 +41,7 @@
       align-items: center;
       flex: 1 1 auto;
 
-      padding-left: 32px;
-      padding-right: 32px;
+      padding: 0 $(32px);
 
       border: none;
       outline: none;
@@ -40,18 +49,17 @@
       box-shadow: none;
 
       font-family: Lato;
-      font-size: 24px;
+      font-size: $(18.75px);
     }
 
     .submit {
       display: flex;
       align-items: center;
 
-      padding-right: 23px;
-      padding-left: 23px;
+      padding: 0 $(32px);
 
       font-family: Material Icons;
-      font-size: 30px;
+      font-size: $(20px);
       color: #303030;
 
       cursor: pointer;
@@ -64,121 +72,139 @@
     justify-content: space-between;
     align-content: space-between;
 
-    margin-top: 65px;
-    margin-bottom: 60px;
-    width: 1200px;
+    margin-top: $(54px);
+    width: $(1000px);
 
     .movie {
-      margin-top: 6px;
-      margin-bottom: 6px;
+      position: relative;
 
-      width: 290px;
-      height: 412px;
+      margin: $(4.5px);
 
-      background: white;
-
-      animation-iteration-count: 1;
-      animation-fill-mode: backwards;
-      animation-timing-function: ease-in-out;
-      animation-duration: 0.3s;
-
-      transition-duration: 0.4s;
+      width: $(323px);
+      height: $(206px);
 
       cursor: pointer;
-    }
 
-    @keyframes slideIn1 {
-      0% {
-        transform: translate(-100px, -100px);
-        opacity: 0;
+      .movie-content {
+        width: 100%;
+        height: 100%;
+
+        padding-right: $(206px);
       }
 
-      75% {
-        opacity: 0.8;
+      @keyframes drop-in {
+        0% {
+          transform: translateY($(-100px));
+          height: 0%;
+          opacity: 0;
+        }
+
+        10% {
+          opacity: 0.6;
+        }
+
+        100% {
+          transform: translateY(0);
+          height: 100%;
+          opacity: 1;
+        }
       }
 
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
+      @keyframes drop-in-image {
+        0% {
+          transform: translate($(-180px), 0);
+          opacity: 0;
+        }
 
-    @keyframes slideIn2 {
-      0% {
-        transform: translate(100px, -100px);
-        opacity: 0;
-      }
+        10% {
+          opacity: 0.8;
+        }
 
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes slideIn3 {
-      0% {
-        transform: translate(-100px, 100px);
-        opacity: 0;
+        100% {
+          transform: translate(0, 0);
+          opacity: 1;
+        }
       }
 
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
+      for i in 1 2 3 4 5 6 {
+        &:nth-child({i}) .background {
+          position: absolute;
+
+          display: flex;
+          flex-flow: row nowrap;
+          content: "";
+
+          background: white;
+
+          height: 100%;
+          width: 100%;
+
+          animation-name: drop-in;
+          animation-duration: 1s;
+          animation-fill-mode: backwards;
+          animation-iteration-count: 1;
+          animation-delay: i * 0.2s;
+        }
+
+        $width = $(136px);
+        $height = $(206px);
+        $scale-width = $width * 1.3;
+        $scale-height = $height * 1.3;
+        $padding-top = (-($scale-height - $height) / 2);
+        $padding-left = (-($scale-width - $width) / 2);
+
+        &:nth-child({i}) .image-wrapper {
+          position: absolute;
+          top: 0;
+          left: 0;
+
+          width: $width;
+          height: $height;
+
+          background: black;
+
+          animation-name: drop-in-image;
+          animation-duration: 1s;
+          animation-fill-mode: backwards;
+          animation-iteration-count: 0.8s;
+          animation-delay: i * 0.2s + 2.2s;
+
+          transition-duration: 0.6s;
+
+          z-index: 5;
+
+          overflow: hidden;
+
+          img {
+            position: absolute;
+            top: $padding-top;
+            left: $padding-left;
+
+            width: $scale-width;
+            height: $scale-height;
+
+            background-image:white;
+
+            object-fit: cover;
+
+            transition-duration: 0.6s;
+          }
+        }
+
+        &:hover {
+          .image-wrapper {
+            top: $padding-top;
+            left: $padding-left;
+            width: $scale-width;
+            height: $scale-height;
+
+            img {
+              top: 0;
+              left: 0;
+            }
+          }
+        }
       }
-    }
-
-    @keyframes slideIn4 {
-      0% {
-        transform: translate(100px, 100px);
-        opacity: 0;
-      }
-
-      100% {
-        transform: translate(0, 0);
-        opacity: 1;
-      }
-    }
-
-    .movie:nth-child(1) {
-      animation-name: slideIn1;
-    }
-
-    .movie:nth-child(2) {
-      animation-name: slideIn2;
-    }
-
-    .movie:nth-child(3) {
-      animation-name: slideIn1;
-    }
-
-    .movie:nth-child(4) {
-      animation-name: slideIn2;
-    }
-
-    .movie:nth-child(5) {
-      animation-name: slideIn3;
-    }
-
-    .movie:nth-child(6) {
-      animation-name: slideIn4;
-    }
-
-    .movie:nth-child(7) {
-      animation-name: slideIn3;
-    }
-
-    .movie:nth-child(8) {
-      animation-name: slideIn4;
-    }
-
-    for $n in 1 2 3 4 5 6 7 8 {
-      .movie:nth-child({$n}) {
-        animation-delay: $n * 0.15s;
-      }
-    }
-
-    .movie:hover {
-      transform: scale(1.1);
     }
   }
 }
