--- a/src/app/login-page/login-page.component.styl
+++ b/src/app/login-page/login-page.component.styl
@@ -4,73 +4,41 @@
   align-items: center;
 
   width: 100%;
-  min-height: 1000px;
   min-height: 1vh;
 
-  padding-bottom: 100px;
+  padding-bottom: $(100px);
 
   .wire-frame {
     display: flex;
     flex-flow: column nowrap;
-
-    align-items: stretch;
+    align-items: center;
     justify-content: space-between;
-    width: 640px;
-    min-height: 640px;
 
-    padding-top: 60px;
-    padding-bottom 80px;
+    width: $(450px);
+    min-height: $(546px);
+
+    padding: $(98px) $(85px);
 
     background: white;
 
-    .top-line, .input-line, .submit-line {
-      display: flex;
-      justify-content: center;
+    h1 {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: $(98px);
+
+      color: #303030;
     }
 
-    .top-line {
-      h1 {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    }
 
-    .content {
-      display: flex;
-      flex-flow: column nowrap;
+    app-input-wrapper {
+      margin-top: $(90px);
+      width: $(280px);
 
-      .input-line {
-        align-self: center;
-        width: 450px;
-
-        app-input-wrapper {
-          width: 100%;
-        }
-
-        &.top {
-          margin-top: 40px;
-        }
-
-        &.bottom {
-          display: flex;
-          flex-flow: row nowrap;
-          justify-content: space-between;
-
-          width: 450px;
-          margin-bottom: 40px;
-
-          .gender {
-            flex: 1 1 auto;
-            margin-right: 30px;
-          }
-
-          .age {
-            flex: 1 1 auto;
-          }
-        }
-      }
+      margin-bottom: 135px;
     }
 
     .submit-line {
+      width: 100%;
+
       button {
         display: flex;
         justify-content: center;
