--- a/src/app/movie-page/movie-page.component.html
+++ b/src/app/movie-page/movie-page.component.html
@@ -4,25 +4,18 @@
   <div class="dashboard">
     <div class="back-action" (click)="navigateBack()">keyboard_backspace</div>
 
-    <div class="content">
-      <h2>Sky Gate</h2>
+    <div class="content" *ngIf="movie">
+      <h2>{{movie?.title}}</h2>
 
-      <p>The movie is base on a semi-fairy-tail futuristic story book.</p>
+      <p *ngFor="let p of movie?.content?.split('\n')">
+      </p>
+    </div>
 
-      <p>
-        Tenth of years from now, there was a economic crisis on earth.
-        The bank systems were locked down without any reason. The entrepreneurs found a very straight cipher code left inside the
-        systems. Then, many people were disappeared and were brought to a new secret planet. Apocalypse started on the earth, many
-        people died. The others were drained and became machine experimental subjects.
-      </p>
-      <p>
-        The story began many year after the crisis
-        period. The young teenagers were now living in an ancient technology and historical city, where they struggling to live day
-        by day, apart from their parents. Another reason was from the political system. But another, the most important reason, was
-        from their own life. With their dreams, hunger and wisdom, they together have to find the way to unlock the cipher behind
-        the history and their life and fight against the threats from the space. Those who were finding us and ready to wipe out
-        all the human race.
-      </p>
+    <div class="fake-content" *ngIf="!movie">
+      <span class="header"><h2>&nbsp;</h2></span>
+
+      <span *ngFor="let p of [1, 2, 3, 4, 5]" class="paragraph">
+      </span>
     </div>
 
     <div class="movies">
