--- a/src/app/navbar/navbar.component.styl
+++ b/src/app/navbar/navbar.component.styl
@@ -1,12 +1,14 @@
+@import '../../styles.styl';
+
 .navbar {
   display: flex;
   width: 100%;
-  height: 90px;
+  height: $(50px);
 
   position: absolute;
-  top: 0px;
-  left: 0px;
-  right: 0px;
+  top: 0;
+  left: 0;
+  right: 0;
 
   .app-title {
     display: flex;
@@ -14,11 +16,11 @@
     height: 100%;
     align-items: center;
 
-    padding-left: 36px;
+    padding-left: $(22px);
 
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 32px
+    font-size: $(24px);
 
     a {
       color: white;
@@ -29,12 +31,12 @@
 
   .account {
     display: flex;
-    padding-right: 76px;
+    padding-right: $(16px);
 
     align-items: center;
 
     font-family: Lato Light;
-    font-size: 22px;
+    font-size: $(16px);
 
     color: white;
     text-decoration: none;
