--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -6,9 +6,9 @@
 
       <app-input-wrapper
         type="text"
-        placeholder="Name"
-        [(ngModel)]="username"
-      ></app-input-wrapper>
+        placeholder="Identity"
+        [(ngModel)]="username">
+      </app-input-wrapper>
 
       <div class="submit-line" (click)="login()">
         <button>Done</button>
