--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -8,7 +8,7 @@
 
   padding-top: $(50px);
 
-  app-navbar {
+  & >>> app-home-page >>> app-navbar {
     display: flex;
     width: 100%;
     height: $(50px);
@@ -17,13 +17,28 @@
     top: 0;
     left: 0;
     right: 0;
-    background: #111111;
+
+    z-index: 2;
   }
 
-  app-home-page {
+  & >>> app-home-page {
     display: block;
 
     height: 100%;
     width: 100%;
   }
+
+  & >>> app-login-page {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    display: block;
+
+    height: 100%;
+    width: 100%;
+  }
+
+  overflow: auto;
 }
