--- a/src/app/login-page/login-page.component.styl
+++ b/src/app/login-page/login-page.component.styl
@@ -1,12 +1,14 @@
+@import '../../styles.styl';
+
 .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 
   width: 100%;
-  min-height: 1vh;
+  height: 100%;
 
-  padding-bottom: $(100px);
+  padding-top: $(50px);
 
   .wire-frame {
     display: flex;
@@ -15,15 +17,17 @@
     justify-content: space-between;
 
     width: $(450px);
-    min-height: $(546px);
+    height: $(546px);
 
-    padding: $(98px) $(85px);
+    padding: 0 $(85px);
 
     background: white;
 
     h1 {
       font-family: Arial, Helvetica, sans-serif;
-      font-size: $(98px);
+      font-size: $(32px);
+
+      margin-top: $(98px);
 
       color: #303030;
     }
@@ -33,11 +37,15 @@
       margin-top: $(90px);
       width: $(280px);
 
-      margin-bottom: 135px;
+      margin-bottom: $(135px);
     }
 
     .submit-line {
+      display: flex;
+      justify-content: center;
+
       width: 100%;
+      margin-bottom: $(102px);
 
       button {
         display: flex;
@@ -47,11 +55,11 @@
         border: none;
         outline: none;
 
-        width: 210px;
-        height: 60px;
+        width: $(180px);
+        height: $(50px);
 
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 24px;
+        font-size: $(18.75px);
         color: white;
 
         background: #f16522;
