--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -7,7 +7,7 @@
       <app-input-wrapper
         type="text"
         placeholder="Identity"
-        [(ngModel)]="username">
+        [(ngModel)]="identity">
       </app-input-wrapper>
 
       <div class="submit-line" (click)="login()">
