--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,9 +11,9 @@
     </ng-template>
 
     <ng-template [ngIf]="username">
-      <a>{{username}}</a>
+      <a></a>
       /
-      <a (click)="logout()">Logout</a>
+      <a>Logout</a>
     </ng-template>
   </nav>
 </div>
