--- a/src/app/home-page/home-page.component.styl
+++ b/src/app/home-page/home-page.component.styl
@@ -10,6 +10,8 @@
 
   padding-top: 50px;
 
+  background: #606060;
+
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -21,13 +23,13 @@
 
   @keyframes fade-in {
     from {
-      filter: blur(10px) brightness(120%);
+      filter: blur(20px) brightness(120%);
       background-size: cover;
       background-position: center;
     }
 
     to {
-      filter: blur(20px) brightness(120%);
+      filter: blur(70px) brightness(120%);
       background-size: cover;
       background-position: center;
     }
@@ -42,7 +44,7 @@
 
     background-position: center;
     background-size: cover;
-    filter: blur(20px) brightness(120%);
+    filter: blur(70px) brightness(120%);
 
     animation-name: fade-in;
     animation-duration: 2s;
@@ -241,6 +243,8 @@
           animation-fill-mode: backwards;
           animation-iteration-count: 0.8s;
           animation-delay: i * 0.2s + 1.4s;
+
+          box-shadow: 0 15px 30px alpha(#303030, 20%);
 
           transition-property: top left height width;
           transition-duration: 0.6s;
