fix: routing problem

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="movie-content">
-        <h2>{{movie.name && movie.name.substr(0, movie.name.match(regex)?.index)}}</h2>
+        <h2>{{getMovieName(movie)}}</h2>
       </div>
     </div>
   </div>
