--- a/src/app/movie-page/movie-page.component.styl
+++ b/src/app/movie-page/movie-page.component.styl
@@ -15,8 +15,6 @@
 
   z-index: 1;
 
-  overflow-y: auto;
-
   .dashboard {
     display: flex;
     flex-flow: column nowrap;
@@ -135,7 +133,10 @@
       }
 
       .about-movie {
+        display: flex;
+
         flex: 1 1 auto;
+
         justify-content: center;
         align-items: center;
 
